--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,8 @@ python-jose==3.4.0
 passlib[bcrypt]==1.7.4
 
 requests==2.32.4
+aiohttp-socks==0.8.4
+PySocks==1.7.1
 aiohttp==3.11.11
 async-timeout
 aiocache
